--- a/DissertationOrganisation/ClientApp/src/components/Habit.css
+++ b/DissertationOrganisation/ClientApp/src/components/Habit.css
@@ -4,6 +4,15 @@
 td, th{
     height: 50px;
     width: 50px; 
+    text-align: center;
+}
+
+.currentDay{
+    background-color: lightpink;
+}
+
+.noDate{
+    background-color: deeppink;
 }
 
 table {
