--- a/DissertationOrganisation/ClientApp/src/components/Habit.css
+++ b/DissertationOrganisation/ClientApp/src/components/Habit.css
@@ -72,3 +72,22 @@ table {
 .todaysHabits{
     min-width: 300px; 
 }
+
+.habitDate, .repeat{
+    float: left; 
+    min-width:200px;
+}
+
+.endDate, .weekly {
+    margin-left: 20px;
+    display: inline-block;
+}
+
+.repeatDays {
+    margin-left: 20px;
+}
+
+.day{
+    margin-bottom: 0px;
+}
+
