--- a/DissertationOrganisation/ClientApp/src/components/Habit.css
+++ b/DissertationOrganisation/ClientApp/src/components/Habit.css
@@ -83,11 +83,10 @@ table {
     display: inline-block;
 }
 
-.repeatDays {
+.repeatDays,.measurable{
     margin-left: 20px;
 }
 
 .day{
     margin-bottom: 0px;
 }
-
