--- a/DissertationOrganisation/ClientApp/src/components/List.css
+++ b/DissertationOrganisation/ClientApp/src/components/List.css
@@ -50,3 +50,11 @@
     background: #6d6464;
     cursor: pointer;
 }
+
+
+.listContainer{
+    margin-top: 10px; 
+    max-height: 300px; 
+    max-width: 400px; 
+    margin-left: 10px; 
+}
