--- a/DissertationOrganisation/ClientApp/src/components/Habit.css
+++ b/DissertationOrganisation/ClientApp/src/components/Habit.css
@@ -81,6 +81,7 @@ table {
 .endDate, .weekly {
     margin-left: 20px;
     display: inline-block;
+    min-width: 200px;
 }
 
 .repeatDays,.measurable{
